Fix code chunk leader

--- a/README.Rmd
+++ b/README.Rmd
@@ -109,14 +109,14 @@ est_sa20 = feols(y ~ x1 + sunab(year_treated, year) |
 Again, for comparison, here the base `iplot` original. Note that we add the 
 legend manually.
 
-```{stagg_iplot}
+```{r stagg_iplot}
 iplot(list('TWFE' = est_twfe, 'Sun & Abraham (2020)' = est_sa20),
       main = 'Staggered treatment', ref.line = -1, pt.join = TRUE)
 legend('topleft', col = c(1, 2), pch = c(20, 17),
 			  legend = c('TWFE', 'Sun & Abraham (2020)'))
 ```
 
-Here's the `giplot` version.
+Here's the `ggiplot` version.
 
 ```{r stagg_ggiplot}
 ggiplot(list('TWFE' = est_twfe, 'Sun & Abraham (2020)' = est_sa20),
