fix scale aesthetics in theme update example

--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,8 @@ remotes::install_github("grantmcdermott/ggiplot")
 ```
 ## Examples
 
-Here follow some examples that draw on the **fixest** introductory vignette,
+Here follow some examples that draw on the **fixest** 
+[introductory vignette](https://lrberge.github.io/fixest/articles/fixest_walkthrough.html),
 as well as the `iplot()` help documentation. 
 
 As we'll see, the package essentially consists of a single function &mdash; 
@@ -75,7 +76,10 @@ errorbar(s) rather than (`ggiplot`'s default of) pointrange(s).
 ggiplot(est_did, geom = 'errorbar')
 ```
 
-Many of the arguments work the same for `ggiplot()` as in `iplot()`.
+Many of the arguments for `iplot()` carry over to `ggiplot()` too. This is
+deliberate, since we want to reduce the cognitive overhead of switching between
+the two plotting methods. For example, we can join points using the same 
+`pt.join = TRUE` argument.
 
 ```{r est_did_pt_join}
 iplot(est_did, pt.join = TRUE)
@@ -95,8 +99,8 @@ ggiplot(est_did, geom_style = 'ribbon', col = 'orange')
 
 ### Example 2: Multiple estimation (i)
 
-We'll demonstrate using the staggered treatment example from the introductory 
-**fixest** vignette.
+We'll demonstrate using the staggered treatment example from the **fixest**
+introductory vignette.
 
 ```{r base_stagg}
 data(base_stagg)
@@ -130,9 +134,9 @@ ggiplot(list(est_twfe, est_sa20),
         main = 'Staggered treatment', ref.line = -1, pt.join = TRUE)
 ```
 
-One nice think about the **ggplot2** API is that it makes changing multiplot
+One nice thing about the **ggplot2** API is that it makes changing multiplot
 figures simple. For example, if you don't like the presentation of "dodged" 
-models in a single frame, then it easy to facet them instead using 
+models in a single frame, then it's easy to facet them instead using 
 the `multi_style = 'facet'` argument.
 
 ```{r stagg_ggiplot_facet}
@@ -174,7 +178,7 @@ legend('topleft', col = c(1, 2), pch = c(20, 17),
 ggiplot(est_twfe_grp, ref.line = -1, main = 'Staggered treatment: TWFE')
 ```
 
-However, `iplot` complains if we combine a _list_ of (several) `fixest_multi` 
+However, `iplot` complains if we combine a list of _several_ `fixest_multi` 
 objects.
 
 ```{r stagg_grp_multi_iplot, error = TRUE}
@@ -217,7 +221,10 @@ plots. E.g.
 
 ```{r theme_update}
 last_plot() + labs(caption = 'Note: Super fancy plot brought to you by ggiplot')
-last_plot() + theme_void() + scale_colour_brewer(palette = 'Set1')
+last_plot() + 
+	theme_grey() + 
+	theme(legend.position = 'none') +
+	scale_colour_brewer(palette = 'Set1', aesthetics = c('colour', 'fill'))
 ```
 
 etc.
