--- a/README.Rmd
+++ b/README.Rmd
@@ -38,9 +38,9 @@ Here follow some examples that draw on the **fixest**
 [introductory vignette](https://lrberge.github.io/fixest/articles/fixest_walkthrough.html),
 as well as the `iplot()` help documentation. 
 
-As we'll see, the package essentially consists of a single function &mdash; 
-**`ggiplot()`** &mdash; that tries to closely mimic it base compatriot. However, 
-by leveraging the **ggplot2** API and infrastructure, it also offers some 
+As we'll see, the primary function in this package is the eponymous 
+**`ggiplot()`**, which tries to closely mimic it base compatriot. However, by 
+leveraging the  **ggplot2** API and infrastructure, it also offers some 
 additional functionality.
 
 Start by loading the **ggiplot** package alongside **fixest**.
@@ -95,10 +95,19 @@ ggiplot(est_did, geom_style = 'ribbon')
 ggiplot(est_did, geom_style = 'ribbon', pt.pch = NA, col = 'orange')
 ```
 
-Unlike `iplot()`, multiple confidence interval levels are supported.
+Unlike base `iplot`, multiple confidence interval levels are supported.
 
 ```{r est_did_ci_multi}
 ggiplot(est_did, ci_level = c(.8, .95))
+```
+
+Another new feature (i.e. unsupported in base `iplot`) is adding aggregated
+post- and/or pre-treatment effects to your plots. Here's an example that builds
+on the previous plot, by adding the mean post-treatment effect.
+
+```{r est_did_aggr_eff}
+ggiplot(est_did, ci_level = c(.8, .95), 
+				aggr_eff = "post", aggr_eff.par = list(col = "orange")) # default col is grey
 ```
 
 ### Example 2: Multiple estimation (i)
