revert to remotes for now

--- a/README.Rmd
+++ b/README.Rmd
@@ -28,10 +28,11 @@ plots.
 
 ## Installation
 
-The package is not yet on CRAN, but can be installed from R-universe:
+The package is not yet on CRAN, but can be installed from GitHub:
 
 ``` r
-install.packages("ggiplot", repos = "https://grantmcdermott.r-universe.dev")
+# install.packages("remotes")
+remotes::install_github("grantmcdermott/ggiplot")
 ```
 ## Quickstart
 
