Fix tab spacing

--- a/README.Rmd
+++ b/README.Rmd
@@ -61,10 +61,11 @@ confidence intervals and aggregate treatments effects.
 
 ```{r example2}
 ggiplot(
-	est_did,
-	ci_level = c(.8, .95),
-	aggr_eff = "post", aggr_eff.par = list(col = "orange")
-	)
+    est_did,
+    ci_level = c(.8, .95),
+    aggr_eff = "post", aggr_eff.par = list(col = "orange")
+)
+
 ```
 
 And you can get quite fancy, combining lists of complex multiple estimation
@@ -75,29 +76,30 @@ base_stagg_grp = base_stagg
 base_stagg_grp$grp = ifelse(base_stagg_grp$id %% 2 == 0, 'Evens', 'Odds')
 
 est_twfe_grp = feols(
-	y ~ x1 + i(time_to_treatment, treated, ref = c(-1, -1000)) | id + year,
-	data = base_stagg_grp, split = ~grp
-	)
+    y ~ x1 + i(time_to_treatment, treated, ref = c(-1, -1000)) | id + year,
+    data = base_stagg_grp, split = ~grp
+)
 
 est_sa20_grp = feols(
-	y ~ x1 + sunab(year_treated, year) | id + year, 
-	data = base_stagg_grp, split = ~grp
-	)
+    y ~ x1 + sunab(year_treated, year) | id + year,
+    data = base_stagg_grp, split = ~grp
+)
 
-ggiplot(list('TWFE' = est_twfe_grp, 'Sun & Abraham (2020)' = est_sa20_grp),
-        ref.line = -1,
-        main = 'Staggered treatment: Split mutli-sample',
-        xlab = 'Time to treatment',
-        multi_style = 'facet',
-        geom_style = 'ribbon',
-				facet_args = list(labeller = labeller(id = \(x) gsub(".*: ", "", x))),
-        theme = theme_minimal() +
-					theme(
-						text = element_text(family = 'HersheySans'),
-						plot.title = element_text(hjust = 0.5),
-						legend.position = 'none'
-						)
-				)
+ggiplot(
+    list("TWFE" = est_twfe_grp, "Sun & Abraham (2020)" = est_sa20_grp),
+    ref.line = -1,
+    main = "Staggered treatment: Split mutli-sample",
+    xlab = "Time to treatment",
+    multi_style = "facet",
+    geom_style = "ribbon",
+    facet_args = list(labeller = labeller(id = \(x) gsub(".*: ", "", x))),
+    theme = theme_minimal() +
+        theme(
+            text = element_text(family = "HersheySans"),
+            plot.title = element_text(hjust = 0.5),
+            legend.position = "none"
+        )
+)
 ```
 
 
