Tweak to default theme

--- a/vignettes/ggiplot.Rmd
+++ b/vignettes/ggiplot.Rmd
@@ -220,20 +220,21 @@ additional arguments and ggplot theming.
 
 ```{r stagg_grp_multi_ggiplot_fancy}
 ggiplot(
-	list('TWFE' = est_twfe_grp, 'Sun & Abraham (2020)' = est_sa20_grp),
-	ref.line = -1,
-	main = 'Staggered treatment: Split mutli-sample',
-	xlab = 'Time to treatment',
-	multi_style = 'facet',
-	geom_style = 'ribbon',
-	facet_args = list(labeller = labeller(id = \(x) gsub(".*: ", "", x))),
-	theme = theme_minimal() +
-		theme(
-			text = element_text(family = 'HersheySans'),
-			plot.title = element_text(hjust = 0.5),
-			legend.position = 'none'
-			)
-	)
+    list("TWFE" = est_twfe_grp, "Sun & Abraham (2020)" = est_sa20_grp),
+    ref.line = -1,
+    main = "Staggered treatment: Split mutli-sample",
+    xlab = "Time to treatment",
+    multi_style = "facet",
+    geom_style = "ribbon",
+    facet_args = list(labeller = labeller(id = \(x) gsub(".*: ", "", x))),
+    theme = theme_minimal() +
+        theme(
+            text = element_text(family = "HersheySans"),
+            plot.title = element_text(hjust = 0.5),
+            legend.position = "none"
+        )
+)
+
 ```
 
 
