--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 # ggfixest
 
 <!-- badges: start -->
+[![CRAN status](https://www.r-pkg.org/badges/version/ggfixest)](https://CRAN.R-project.org/package=ggfixest)
 [![R-universe status badge](https://grantmcdermott.r-universe.dev/badges/ggfixest)](https://grantmcdermott.r-universe.dev)
 [![R-CMD-check](https://github.com/grantmcdermott/ggfixest/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/grantmcdermott/ggfixest/actions/workflows/R-CMD-check.yaml)
 [![Docs](https://img.shields.io/badge/docs-homepage-blue.svg)](https://grantmcdermott.com/ggfixest/index.html)
@@ -35,7 +36,13 @@ plots---with minimal effort and scope for further customization.
 
 ## Installation
 
-The package is not yet on CRAN, but can be installed from R-universe:
+The stable version of **ggfixest** is available on CRAN.
+
+``` r
+install.packages("ggfixest")
+```
+
+Or, you can grab the latest development version from R-universe.
 
 ``` r
 install.packages("ggfixest", repos = "https://grantmcdermott.r-universe.dev")
