--- a/README.Rmd
+++ b/README.Rmd
@@ -56,14 +56,14 @@ provides a number of examples in the help documentation. (Also available by
 typing `?ggcoefplot` or `?ggiplot` in your R console.)  But here are a few 
 quickstart examples to whet your appetite.
 
-Start by loading the **ggfixest** packages.
+Start by loading the **ggfixest** package.
 
 ```{r pkgload}
 library(ggfixest)
 ```
 
-Note this automatically loaded **ggplot2** and **fixest** too as required
-dependencies. As the package name suggests, **ggfixest** _only_ supports
+Note that this automatically loads **ggplot2** and **fixest** as required
+dependencies too. As the package name suggests, **ggfixest** _only_ supports
 **fixest** model objects.^[For other model classes, a more generic visualization
 package/tool like
 [**see**](https://easystats.github.io/see/articles/parameters.html) or
